force-app/main/default/objects/CaseTabViewer__c/CaseTabViewer__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CaseTabViewer</label>
</CustomObject>