force-app/main/default/objects/CaseTabViewer__c/fields/Enable_Quick_Case__c.field-meta.xml
<CustomField>
    <fullName>Enable_Quick_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Quick Case</label>
    <type>Checkbox</type>
</CustomField>