force-app/main/default/objects/CaseTabViewer__c/fields/Show_New_Comment__c.field-meta.xml
<CustomField>
    <fullName>Show_New_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show New Comment</label>
    <type>Checkbox</type>
</CustomField>