force-app/main/default/objects/CaseTabViewer__c/fields/Tab_Count__c.field-meta.xml
<CustomField>
    <fullName>Tab_Count__c</fullName>
    <label>Tab Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>