force-app/main/default/objects/CaseTabViewer__c/fields/Top_Count__c.field-meta.xml
<CustomField>
    <fullName>Top_Count__c</fullName>
    <label>Top Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>